...
              }
            />
          ))}
        </View>
        <View style={styles.grow} />
        <Button
          testID="language-choice.continue-button"
          label={model.tSelected('language-choice.continue-button')}
          onPress={model.onContinue}
          kind="primary"
          size="hero"
          iconEnd="forward"
          isBlock
...
